Updated HELK Install & License